ontol/ontol-compiler/test-cases/error/repr/disjoint_intersection2.on
// NB: meters is a concrete type here:
def meters (rel .is: i64)

def my_length ( // ERROR Intersection of disjoint types
    rel .is: meters // NOTE Base type is `ontol.number`
    rel .is: text // NOTE Base type is `ontol.text`
)
